# 20251117_Mainmatter_Redis_ProcMacros

./: .gitignore  book.toml  readme.md
book_src/: .12_EasiestMacro.md  01_Chapter.md  01_Title.md  02_Chapter.md  02_InTodaysTalk.md  02_InTodaysTalk2.md  02_InTodaysTalk3.md  03_Chapter.md  03_WhoAmI.md  04_01_TypesOfProcMacros.md  04_01_TypesOfProcMacros2.md  04_01_TypesOfProcMacros3.md  04_DeclMacros.md  04_DeclMacros2.md  04_WhatAreProcMacros0.md  04_WhatAreProcMacros1.md  04_WhatAreProcMacros2.md  04_WhatAreProcMacros3.md  04_WhatAreProcMacros4.md  07_MyPoint.md  07_MyPoint2.md  07_MyPoint3.md  08_MyPointSerde.md  08_MyPointSerde2.md  09_MyPointClap.md  09_MyPointClap0.md  09_MyPointClap2.md  09_MyPointClap3.md  10_PunchLine.md  12_ConstructorUsecase.md  12_CustomProcMacro.md  12_ErrorHandling.md  12_ErrorHandlingExample.md  12_Quote_Composite_for_Ctor.md  12_Quote_Iterators.md  12_Quote_Variable_Interpolation.md  (+9 more)
code/: Cargo.toml
code/a_mypoint_default_derives/: Cargo.toml
code/a_mypoint_default_derives/src/: main.rs
code/b_mypoint_serde/: Cargo.toml
code/b_mypoint_serde/src/: main.rs
code/c_mypoint_clap/: Cargo.toml
code/c_mypoint_clap/src/: main.rs
code/d_mypoint_sqlx/: Cargo.toml
code/e_mypoint_custom_derive_ctor/: Cargo.toml
code/e_mypoint_custom_derive_ctor/src/: main.rs
code/e_mypoint_custom_derive_greetings/: Cargo.toml
code/e_mypoint_custom_derive_greetings/src/: main.rs
code/e_mypoint_custom_derive_macros/: Cargo.toml
code/e_mypoint_custom_derive_macros/src/: ctor.rs  lib.rs
code/tmp/: Cargo.toml
code/tmp/src/: main.rs
